@@ -39,9 +39,6 @@ import java.util.Properties;
 import java.util.PropertyResourceBundle;
 import junit.framework.TestCase;
 import junit.framework.TestSuite;
-import org.apache.commons.io.IOUtils;
-
-import static org.jvnet.hudson.test.JellyTestSuiteBuilder.scan;
 
 /**
  * Checks things about {@code *.properties}.
@@ -49,7 +46,7 @@ import static org.jvnet.hudson.test.JellyTestSuiteBuilder.scan;
 public class PropertiesTestSuite extends TestSuite {
 
     public PropertiesTestSuite(File resources) throws IOException {
-        for (Map.Entry<URL,String> entry : scan(resources, "properties").entrySet()) {
+        for (Map.Entry<URL,String> entry : JellyTestSuiteBuilder.scan(resources, "properties").entrySet()) {
             addTest(new PropertiesTest(entry.getKey(), entry.getValue()));
         }
     }
@@ -76,12 +73,14 @@ public class PropertiesTestSuite extends TestSuite {
                 }
             };
 
-            byte[] contents = IOUtils.toByteArray(resource);
-            if (!isEncoded(contents, StandardCharsets.US_ASCII)) {
-                boolean isUtf8 = isEncoded(contents, StandardCharsets.UTF_8);
-                boolean isIso88591 = isEncoded(contents, StandardCharsets.ISO_8859_1);
-                if (!isUtf8 && !isIso88591) {
-                    throw new AssertionError(resource + " must be either valid UTF-8 or valid ISO-8859-1.");
+            try (InputStream is = resource.openStream()) {
+                byte[] contents = is.readAllBytes();
+                if (!isEncoded(contents, StandardCharsets.US_ASCII)) {
+                    boolean isUtf8 = isEncoded(contents, StandardCharsets.UTF_8);
+                    boolean isIso88591 = isEncoded(contents, StandardCharsets.ISO_8859_1);
+                    if (!isUtf8 && !isIso88591) {
+                        throw new AssertionError(resource + " must be either valid UTF-8 or valid ISO-8859-1.");
+                    }
                 }
             }
 
